--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
 <html>
-
-<head>
-    <title>CB TV Repository</title>
-</head>
-
+<head><title>CB TV Repo</title></head>
 <body>
-    <h1>CB TV Repo Files</h1>
-    <ul>
-        <li><a href="repository.cbtv-1.0.1.zip">repository.cbtv-1.0.1.zip</a> (Install this first!)</li>
-        <li><a href="plugin.video.cbtv-1.3.3.zip">plugin.video.cbtv-1.3.3.zip</a></li>
-        <li><a href="addons.xml">addons.xml</a></li>
-        <li><a href="addons.xml.md5">addons.xml.md5</a></li>
-        <li><a href="config.json">config.json</a></li>
-    </ul>
+<h1>CB TV Repository</h1>
+<ul>
+<li><a href="addons.xml">addons.xml</a></li>
+<li><a href="addons.xml.md5">addons.xml.md5</a></li>
+<li><a href="plugin.video.cbtv/plugin.video.cbtv-1.4.2.zip">plugin.video.cbtv-1.4.2.zip</a></li>
+<li><a href="repository.cbtv/repository.cbtv-1.0.2.zip">repository.cbtv-1.0.2.zip</a></li>
+</ul>
 </body>
-
 </html>
