--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <li><a href="addons.xml">addons.xml</a></li>
 <li><a href="addons.xml.md5">addons.xml.md5</a></li>
 <li><a href="plugin.video.cbtv/plugin.video.cbtv-1.4.2.zip">plugin.video.cbtv-1.4.2.zip</a></li>
-<li><a href="repository.cbtv/repository.cbtv-1.0.2.zip">repository.cbtv-1.0.2.zip</a></li>
+<li><a href="repository.cbtv-1.0.2.zip">repository.cbtv-1.0.2.zip</a></li>
 </ul>
 </body>
 </html>
